crates/cherry-pit-app/tests/compile_fail/policy_closure_missing_ctx.stderr
warning: unused imports: `BusError` and `EventBus`
  --> tests/compile_fail/policy_closure_missing_ctx.rs:10:29
   |
10 |     Aggregate, AggregateId, BusError, Command, CommandGateway, CorrelationContext, CreateResult,
   |                             ^^^^^^^^
11 |     DispatchResult, DomainEvent, EventBus, EventEnvelope, EventStore, HandleCommand, Policy,
   |                                  ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0593]: closure is expected to take 3 arguments, but it takes 2 arguments
  --> tests/compile_fail/policy_closure_missing_ctx.rs:96:9
   |
96 |     app.register_policy(
   |         ^^^^^^^^^^^^^^^ expected closure that takes 3 arguments
97 |         P,
98 |         |_out, _gw: &Gw| async move { Ok(()) },
   |         ---------------- takes 2 arguments
